[package]
name = "mcp-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-mcp = { workspace = true }
anyhow = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tracing-subscriber = "0.3"
tracing = "0.1"
url = "2.5.4"
serde_yaml = "0.9"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
schemars = "0.8.21"
[[bin]]
name = "mcp-proxy"
path = "src/main.rs"
